--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,9 @@
   "name": "rss-reader-backend",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
