--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,11 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.14",
+    "@types/pg": "^7.14.7",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.5.1"
   }
 }
