--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "rss-reader-backend",
-  "version": "0.0.1",
-  "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "AGPL-3.0-or-later",
-  "devDependencies": {
-    "@types/express": "^4.17.9",
-    "@types/node": "^14.14.14",
-    "@types/pg": "^7.14.7",
-    "typescript": "^4.1.3"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "pg": "^8.5.1"
-  }
+    "name": "rss-reader-backend",
+    "version": "0.0.1",
+    "author": "",
+    "description": "",
+    "license": "AGPL-3.0-or-later",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "devDependencies": {
+        "@types/express": "^4.17.9",
+        "@types/node": "^14.14.14",
+        "@types/pg": "^7.14.7",
+        "typescript": "^4.1.3"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "pg": "^8.5.1"
+    },
+    "scripts": {
+        "build": "tsc && cp -pr src/resources dist",
+        "prepare": "npm run build",
+        "start": "npm run build && node dist/index.js"
+    },
+    "files": [ "dist" ]
 }
