--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,18 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
         "@types/express": "^4.17.9",
         "@types/node": "^14.14.14",
         "@types/pg": "^7.14.7",
+        "@types/uuid": "^8.3.0",
         "typescript": "^4.1.3"
     },
     "dependencies": {
+        "bcrypt": "^5.0.0",
         "express": "^4.17.1",
-        "pg": "^8.5.1"
+        "pg": "^8.5.1",
+        "uuid": "^8.3.2"
     },
     "scripts": {
         "build": "tsc && cp -pr src/resources dist",
