--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
         "@types/express": "^4.17.9",
+        "@types/http-errors": "^1.8.0",
         "@types/node": "^14.14.14",
         "@types/pg": "^7.14.7",
         "@types/uuid": "^8.3.0",
@@ -17,7 +18,9 @@
     "dependencies": {
         "bcrypt": "^5.0.0",
         "express": "^4.17.1",
+        "http-errors": "^1.8.0",
         "pg": "^8.5.1",
+        "rss-parser": "^3.10.0",
         "uuid": "^8.3.2"
     },
     "scripts": {
