--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
         "bcrypt": "^5.0.0",
         "express": "^4.17.1",
         "http-errors": "^1.8.0",
+        "loglevel": "^1.7.1",
         "pg": "^8.5.1",
         "rss-parser": "^3.10.0",
         "uuid": "^8.3.2"
