--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "types": "dist/index.d.ts",
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
+        "@types/cors": "^2.8.9",
         "@types/express": "^4.17.9",
         "@types/http-errors": "^1.8.0",
         "@types/node": "^14.14.14",
@@ -17,6 +18,7 @@
     },
     "dependencies": {
         "bcrypt": "^5.0.0",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "http-errors": "^1.8.0",
         "loglevel": "^1.7.1",
