--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "typescript": "~3.8.2"
+    "typescript": "~3.8.2",
+    "user-friendly-date": "^1.1.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
