--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
         "@types/cors": "^2.8.9",
+        "@types/dompurify": "^2.2.1",
         "@types/express": "^4.17.9",
         "@types/http-errors": "^1.8.0",
         "@types/node": "^14.14.14",
@@ -21,6 +22,8 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "http-errors": "^1.8.0",
+        "import": "0.0.6",
+        "isomorphic-dompurify": "^0.12.0",
         "loglevel": "^1.7.1",
         "pg": "^8.5.1",
         "rss-parser": "^3.10.0",
